<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deletefood">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="173dp"
        android:layout_height="77dp"
        android:layout_marginTop="556dp"
        android:text="PIZZA"
        android:textColor="#9C3110"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="255dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/updatefood"
        android:onClick="@string/mainupdate"
        android:text="Update"
        android:textStyle="bold"
        app:backgroundTint="#FF5722"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="598dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/delete"
        android:onClick="@string/mainupdate"
        android:text="Delete"
        android:textStyle="bold"
        app:backgroundTint="#EF0025"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="465dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/delete"
        android:onClick="@string/mainupdate"
        android:text="Delete"
        android:textStyle="bold"
        app:backgroundTint="#EF0025"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="598dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/updatefood"
        android:onClick="@string/mainupdate"
        android:text="Update"
        android:textStyle="bold"
        app:backgroundTint="#FF5722"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="465dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="173dp"
        android:layout_height="77dp"
        android:layout_marginTop="412dp"
        android:hint="@string/updatefoo"
        android:text="Chicken Rice"
        android:textColor="#9C3110"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="236dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/delete"
        android:onClick="@string/mainupdate"
        android:text="Delete"
        android:textStyle="bold"
        app:backgroundTint="#EF0025"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="281dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="436dp"
        android:layout_height="312dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/whatsapp_image_2021_08_09_at_17_30_31"
        tools:layout_editor_absoluteY="-90dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="197dp"
        android:layout_height="188dp"
        android:layout_marginBottom="356dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo_1571091655789_405eb7a3a3a8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="152dp"
        android:layout_height="79dp"
        android:text="BEEF BURGER"
        android:textColor="#9C3110"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="243dp"
        tools:layout_editor_absoluteY="222dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/updatefood"
        android:onClick="@string/mainupdate"
        android:text="Update"
        android:textStyle="bold"
        app:backgroundTint="#FF5722"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="281dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="273dp"
        android:layout_height="61dp"
        android:hint="@string/listofall"
        android:text="List Of All Foods"
        android:textColor="#DD0C0C"
        android:textSize="29dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="107dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="195dp"
        android:layout_height="101dp"
        app:srcCompat="@drawable/kk"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="412dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="185dp"
        android:layout_height="146dp"
        app:srcCompat="@drawable/spitonys_pizza_night"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="543dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/addnewfood"
        android:text="Add new Food "
        android:textColor="#C61111"
        android:textSize="23dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="168dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:layout_editor_absoluteX="353dp" />
</androidx.constraintlayout.widget.ConstraintLayout>