<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewFood">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="183dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whatsapp_image_2021_08_09_at_17_30_31" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="420dp"
        android:layout_height="185dp"
        android:text="Add New Food Item "
        android:textColor="#E31616"
        android:textSize="32dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="159dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="409dp"
        android:layout_height="105dp"
        android:ems="10"
        android:hint="@string/FoodName"
        android:inputType="textPersonName"
        android:textColorHint="#E81818"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="407dp"
        android:layout_height="161dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textColor="#D31212"
        android:textColorHint="#EA0E0E"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="415dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/Price"
        android:inputType="textPersonName"
        android:textColor="#AC0C0C"
        android:textColorHint="#E60202"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="183dp"
        android:layout_height="39dp"
        android:text="PicUpload"
        android:textColor="#B61212"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="73dp"
        android:layout_height="58dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/button2"
        android:layout_width="195dp"
        android:layout_height="63dp"
        android:onClick="@string/btn1"
        android:text="Add Food"
        android:textColor="#150101"
        android:textSize="20dp"
        android:textStyle="bold"
        app:backgroundTint="#4CAF50"
        app:iconTint="#120101"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        app:rippleColor="#130101" />

</androidx.constraintlayout.widget.ConstraintLayout>