<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updatefood">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="541dp"
        android:layout_height="208dp"
        app:srcCompat="@drawable/whatsapp_image_2021_08_09_at_17_30_31"
        tools:layout_editor_absoluteX="-65dp"
        tools:layout_editor_absoluteY="-13dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="364dp"
        android:layout_height="155dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="Update Food Item "
        android:textColor="#970B0B"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="140dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="416dp"
        android:layout_height="47dp"
        android:layout_marginBottom="468dp"
        android:ems="10"
        android:hint="@string/updatename"
        android:inputType="textPersonName"
        android:text="Burger"
        android:textColor="#E30A0A"
        android:textColorHint="#DF0C0C"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="415dp"
        android:layout_height="131dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/updatedescription"
        android:inputType="textMultiLine"
        android:text="There are many kinds of crave worthy foods. From foods that are sweet and salty to savory, there is one crave-able item that sure gets consumers talking. National Cattlemen’s Beef Association"
        android:textColor="#C31212"
        android:textColorHint="#F61313"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="409dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/updatePrice"
        android:inputType="textPersonName"
        android:text="RS 720.00"
        android:textColor="#C60C0C"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="436dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="257dp"
        android:layout_height="105dp"
        app:srcCompat="@drawable/photo_1571091655789_405eb7a3a3a8"
        tools:layout_editor_absoluteX="-13dp"
        tools:layout_editor_absoluteY="500dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="812dp"
        android:layout_height="60dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:clickable="true"
        android:tint="#980707"
        app:elevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:layout_editor_absoluteY="518dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="214dp"
        android:layout_height="70dp"
        android:text="Update Food "
        android:textColor="#0C0101"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#FF9800"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="630dp" />
</androidx.constraintlayout.widget.ConstraintLayout>